layout problem resolved

--- a/src/Common/SectionLayout/style.css
+++ b/src/Common/SectionLayout/style.css
@@ -1,5 +1,5 @@
-.layout{
-    font-family: "Poppins",sans-serif;
+.layout {
+  font-family: "Poppins", sans-serif;
 }
 
 .headSection {
@@ -11,7 +11,6 @@
 }
 
 .bigHeading {
-  font-size: 150px;
   position: absolute;
   opacity: 0.05;
   font-weight: 600;
@@ -21,4 +20,62 @@
   text-align: center;
   font-size: 40px;
   font-weight: 600;
+}
+
+@media (min-width: 1600px) {
+  .bigHeading {
+    font-size: 150px;
+  }
+
+  .headingTopic {
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .bigHeading {
+    font-size: 120px;
+  }
+
+  .headingTopic {
+    font-size: 40px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .bigHeading {
+    font-size: 120px;
+  }
+
+  .headingTopic {
+    font-size: 40px;
+  }
+}
+@media (min-width: 768px) and (max-width: 991px) {
+  .bigHeading {
+    font-size: 92px;
+  }
+
+  .headingTopic {
+    font-size: 38px;
+  }
+}
+@media (min-width: 576px) and (max-width: 767px) {
+  .bigHeading {
+    font-size: 70px;
+  }
+
+  .headingTopic {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 575px) {
+  .bigHeading {
+    font-size: 60px;
+  }
+
+  .headingTopic {
+    font-size: 20px;
+  }
 }
