--- a/src/Pages/HomeImageSection/style.css
+++ b/src/Pages/HomeImageSection/style.css
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: center;
   gap: 25px;
+  overflow: hidden;
 }
 
 .homeImage h3 {
